5.4.4

FIXES
    - Show combo points for druid in cat form correctly

5.4.3

FIXES
    - Fix Bags if the account has no authenticator
    - Fix raid control error during combat

5.4.2

NEW
    - Barbershop skin
    - HUD Settings: "Apply UI scale to all scaleable frames"
    - Added option to show inventory separated
    - Added option to show unit gender in tooltip

FIXES
    - Bug fixes for raidcontrol frame
    - Destruction Warlooks: We steel the blizzard Soul shards as our classpower so you can see also soul shard fragments (temp, till we have our own graphic)
    - Bonus Roll should now show properly
    - Garrison minimapbutton is now shown

5.4.1

NEW
    - Added Maelstrom classpowerbar (shaman)

FIXES
    - Spec spellbooktab is now only with a spec available
    - Fix some lua errors
    - Set default quest tracker into top right corner

5.4.0
    Update for Shadowlands Pre-Patch

    Note: Quest Tracker is disabled for now, need a complete rework

NEW
    - Sizer for Heropanel
    - Redo "Move HUD" mode:
        - Frame are now moving with there movers
        - Added new frames
        - Added "Little Settings Window": Right click a mover to see extra options for that frame (atm only scaling)
    - Now you can collaps Addons in the currency tab
    - Export and import Profiles
    - Added a short install process

FIXES
    - Fix target dropdown menu
    - Fix many more bugs


5.3.5-hotfix

FIXES
    - Fix error while dead
    

5.3.5

NEW
    - Make bottom left and right multibar moveable
    - Make Talking Head Frame moveable
    - Added custom and moveable class totems
    - Added player and mouse coordinates to Worldmap
    - Added Inbox skin
    

5.3.4

FIXES
    - Fix lua error if enter an invalid player de/buff size
    - Fix petbar auto moving in default position


5.3.3

NEW
    - Added option to change player buff and debuff size
    - Fix error in afk mode

5.3.2

FIXES
    - Fixed "Show Player in Groupframes"
    - Fixed Alertframe issue