@@ -139,6 +139,7 @@ objectives/bossFrames.lua
 objectives/arenaFrames.lua
 objectives/achievement.lua
 objectives/vehicleButton.lua
+objectives/extraAB_bossAB.lua
 
 character/character.xml
 character/paperdoll.xml
