@@ -340,6 +340,8 @@ local function GWUseThisLocalization()
     L["SEPARATE_BAGS_CHANGE_HEADER_TEXT"] = "New bag name"
     L["SEPARATE_BAGS_CHANGE_HEADER_TOOLTIP"] = "Right click to set an individual name"
     L["REVERSE_NEW_LOOT_TEXT"] = "Loot to Leftmost Bag"
+    L["EXTRA_AB_NAME"] = "Boss Button"
+    L["ZONE_ANILITY_AB_NAME"] = "Zone Ability"
 end
 
 if GetLocale() == "itIT" then
