@@ -1,7 +1,12 @@
 5.4.4
 
+NEW
+    - Added "Boss Button" and "Zone Ability" to Move HUD
+
 FIXES
     - Show combo points for druid in cat form correctly
+    - Fix Bankframe issue in combination with separate bags
+    - Bug fixes
 
 5.4.3
 
